[gd_scene load_steps=10 format=2]

[ext_resource path="res://character/creatures/creature.tscn" type="PackedScene" id=1]
[ext_resource path="res://character/creatures/kepala/kepala.gd" type="Script" id=2]
[ext_resource path="res://character/creatures/kepala/kepala_night.png" type="Texture" id=3]
[ext_resource path="res://character/creatures/kepala/kepala_atk.png" type="Texture" id=4]
[ext_resource path="res://character/creatures/kepala/kepala_ai.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]

resource_name = "attack"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]

resource_name = "idle-right"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 15.0

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 60.0

[node name="Creature" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
max_health = 100

[node name="OrientedSprite" parent="." index="0"]

position = Vector2( 2, -44 )
texture = ExtResource( 3 )
flip_h = true
hframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="OrientedSprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack = SubResource( 1 )
anims/idle-right = SubResource( 2 )
blend_times = [  ]

[node name="CollisionBox" parent="." index="1"]

scale = Vector2( 1, 0.7 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

scale = Vector2( 1, 0.6 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" parent="." index="3"]

wait_time = 10.0
one_shot = false
autostart = true

[node name="AI" parent="." index="4"]

script = ExtResource( 5 )

[connection signal="animation_finished" from="OrientedSprite/AnimationPlayer" to="AI" method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="Timer" to="AI" method="_on_Timer_timeout"]


